progress - added repository & service support